force-app/main/default/objects/Material__c/fields/Carbon_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Carbon_per_Unit__c</fullName>
    <description>Amount of CO₂ emitted per unit of this material (e.g., 1.25 kg)</description>
    <label>Carbon per Unit Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>