force-app/main/default/objects/Material__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Fabric</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>