force-app/main/default/objects/Material__c/fields/Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Unit__c</fullName>
    <description>Cost of one unit of this material</description>
    <label>Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>