force-app/main/default/objects/Material__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supplier or vendor name</description>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>Materials</relationshipName>
    <type>Lookup</type>
</CustomField>