force-app/main/default/objects/Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Cost_per_Unit__c</columns>
    <columns>Carbon_per_Unit__c</columns>
    <columns>Supplier__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>